# src/pet_flow_backend/services/financial/financial.routes.ts
@@ -9,10 +9,10 @@ export class FinancialRoutes {
   }
 
   private initRoutes(): void {
-    this.router.get("/", (req, res) => this.controller.getAllFinancials(req, res));
-    this.router.get("/:id", (req, res) => this.controller.getFinancialById(req, res));
+    this.router.post("/all", (req, res) => this.controller.getAllFinancials(req, res));
+    this.router.post("/detail", (req, res) => this.controller.getFinancialById(req, res));
     this.router.post("/", (req, res) => this.controller.create(req, res));
-    this.router.put("/:id", (req, res) => this.controller.update(req, res));
-    this.router.delete("/:id", (req, res) => this.controller.delete(req, res));
+    this.router.put("/", (req, res) => this.controller.update(req, res));
+    this.router.delete("/", (req, res) => this.controller.delete(req, res));
   }
 }
